[package]
name = "gw2"
version = "0.2.1"
authors = ["Joe Maguire <joe.j.maguire@gmail.com>"]
repository = "https://github.com/joe-maguire/gw2.git"
homepage = "https://github.com/joe-maguire/gw2.git"
license = "MIT"
readme = "README.md"
description = "A library for interfacing with the Guild Wars 2 official API"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
